# python1

./: .gitignore  pyproject.toml
src/python1/: decorators.py  exceptions.py  main.py
src/python1/downloads/: missing_values.csv  values.csv
